# grape_tts

./: .gitignore  README.md
grape_hindi_tts/: .env.example  EVALUATION_PIPELINE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE_CHECKLIST.md  Makefile  pyproject.toml  requirements.txt
grape_hindi_tts/configs/: base_config.yaml  hindi_data_config.yaml
grape_hindi_tts/grape_hindi_tts/: __init__.py
grape_hindi_tts/grape_hindi_tts/data/: EXAMPLES.py  INDEX.txt  PIPELINE_DOCUMENTATION.md  QUICK_START.md  __init__.py  audio_processor.py  dataset.py  hindi_text_processor.py  precompute_latents.py  prepare_dataset.py
grape_hindi_tts/grape_hindi_tts/evaluation/: EVALUATION_GUIDE.md  INDEX.md  QUICK_START.md  README.md  __init__.py  evaluate.py  generate_samples.py  inference.py  metrics.py
grape_hindi_tts/grape_hindi_tts/models/: API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  QUICK_START.md  TEXT_TO_LATENT_README.md  __init__.py  attention.py  convnext.py  discriminators.py  duration_predictor.py  example_usage.py  losses.py  reference_encoder.py  speech_autoencoder.py  text_encoder.py  text_to_latent.py  vf_estimator.py
grape_hindi_tts/grape_hindi_tts/training/: IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.sh  README.md  TRAINING_GUIDE.md  __init__.py  config_autoencoder.yaml  config_duration.yaml  config_text_to_latent.yaml  precompute_latents.py  requirements.txt  run_all_stages.py  train_autoencoder.py  train_duration.py  train_text_to_latent.py  trainer_utils.py
grape_hindi_tts/grape_hindi_tts/utils/: __init__.py  audio_utils.py  config_utils.py  logging_utils.py
