[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supertonic-hindi-tts"
version = "0.1.0"
description = "SupertonicTTS: Hindi Text-to-Speech Training Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SupertonicTTS Contributors"}
]

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tensorboard>=2.12.0",
    "wandb>=0.14.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "indic-nlp-library>=0.92",
    "aksharamukha>=0.2.1",
    "pydub>=0.25.1",
    "pesq>=0.0.4",
    "pystoi>=0.3.3",
    "resemblyzer>=0.1.1.dev0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
]
audio = [
    "julius>=0.2.7",
    "audioread>=3.0.0",
]

[tool.setuptools]
packages = ["supertonic_hindi_tts"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
